Added led component/led task/log task

--- a/software/clock/.vscode/settings.json
+++ b/software/clock/.vscode/settings.json
@@ -7,6 +7,37 @@
     ],
     "files.associations": {
         "gpio.h": "c",
-        "gpio_types.h": "c"
-    }
+        "gpio_types.h": "c",
+        "test.h": "c",
+        "led.h": "c",
+        "stdbool.h": "c",
+        "iosfwd": "c",
+        "xlocbuf": "c",
+        "*.inc": "c",
+        "bit": "c",
+        "compare": "c",
+        "cstddef": "c",
+        "string": "c",
+        "limits": "c",
+        "memory": "c",
+        "new": "c",
+        "atomic": "c",
+        "fstream": "c",
+        "iterator": "c",
+        "sstream": "c",
+        "type_traits": "c",
+        "vector": "c",
+        "xlocmon": "c",
+        "xloctime": "c",
+        "xmemory": "c",
+        "xstring": "c",
+        "xtree": "c",
+        "xutility": "c",
+        "unity.h": "c",
+        "unity_internals.h": "c",
+        "limits.h": "c",
+        "unity_fixture.h": "c",
+        "random": "c",
+        "task_led.h": "c"
+    },
 }
