--- a/software/clock/CMakeLists.txt
+++ b/software/clock/CMakeLists.txt
@@ -5,5 +5,6 @@
 cmake_minimum_required(VERSION 3.16)
 
 set(PROJECT_VER "0.0.1")
+set(COMPONENTS esptool_py main)
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(clock)
