--- a/software/clock/main/CMakeLists.txt
+++ b/software/clock/main/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "clock.c"
-                    INCLUDE_DIRS "."
-                    REQUIRES driver)
+idf_component_register(SRCS "clock.c" "tasks/task_led.c" "tasks/task_log.c"
+                    INCLUDE_DIRS "tasks"
+                    REQUIRES led)
