added iot button component task for boot button usage

--- a/software/clock/.vscode/settings.json
+++ b/software/clock/.vscode/settings.json
@@ -38,6 +38,7 @@
         "limits.h": "c",
         "unity_fixture.h": "c",
         "random": "c",
-        "task_led.h": "c"
+        "task_led.h": "c",
+        "task.h": "c"
     },
 }
